--- a/introduce.html
+++ b/introduce.html
@@ -3,7 +3,8 @@
     <title>웹 프로그래밍</title>
 </head>
 <body>
-    이름: <b>김도연</b><br>
+    <h1>자기 소개</h1><br>
+    이름: <b><span style="font-family: 맑은고딕;">김도연</span></b><br>
     학부(과): 전자바이오물리학과<br>
     전자우편: kdyhk0628@naver.com<br>
     <p>
