--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
 <body>
     <table>
         <tr>
-            <th></th>
+            <th>&nbsp;</th>
             <th>월</th>
             <th>화</th>
             <th>수</th>
@@ -13,44 +13,44 @@
             <th>금</th>
         </tr>
         <tr>
-            <td>2</td>
+            <td>1</td>
             <td>전자기학1</td>
-            <td></td>
+            <td>&nbsp;</td>
             <td>마이크로파 물리학</td>
-            <td></td>
-            <td></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
         </tr>
         <tr>
             <td>2</td>
             <td>마이크로파 물리학</td>
-            <td></td>
+            <td>&nbsp;</td>
             <td>전자기학1</td>
-            <td></td>
-            <td></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
         </tr>
         <tr>
             <td>3</td>
-            <td></td>
+            <td>&nbsp;</td>
             <td>정보 디스플레이 개론</td>
             <td>물리수학2</td>
             <td>반도체 소자 물리학2</td>
-            <td></td>
+            <td>&nbsp;</td>
         </tr>
         <tr>
             <td>4</td>
             <td>물리수학2</td>
             <td>반도체 소자 물리학2</td>
-            <td></td>
+            <td>&nbsp;</td>
             <td>정보 디스플레이 개론</td>
-            <td></td>
+            <td>&nbsp;</td>
         </tr>
         <tr>
             <td>5</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
             <td>진로탐색 및 설계</td>
-            <td></td>
+            <td>&nbsp;</td>
         </tr>
     </table>
 </body>
