--- a/table.html
+++ b/table.html
@@ -3,7 +3,7 @@
     <title>시간표</title>
 </head>
 <body>
-    <table>
+    <table style="border: 1px solid black;" rules=all>
         <tr>
             <th>&nbsp;</th>
             <th>월</th>
