--- a/introduce.html
+++ b/introduce.html
@@ -21,5 +21,56 @@
     <ul><li><a href="https://www.naver.com">네이버</a></li>
         <li><a href="https://www.daum.net">다음</a></li>
     </ul>
+    
+    <table style="border: 1px solid black;" rules=all>
+        <tr>
+            <th>&nbsp;</th>
+            <th>월</th>
+            <th>화</th>
+            <th>수</th>
+            <th>목</th>
+            <th>금</th>
+        </tr>
+        <tr>
+            <td>1교시</td>
+            <td>전자기학1</td>
+            <td>&nbsp;</td>
+            <td>마이크로파 물리학</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>2교시</td>
+            <td>마이크로파 물리학</td>
+            <td>&nbsp;</td>
+            <td>전자기학1</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>3교시</td>
+            <td>&nbsp;</td>
+            <td>정보 디스플레이 개론</td>
+            <td>물리수학2</td>
+            <td>반도체 소자 물리학2</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>4교시</td>
+            <td>물리수학2</td>
+            <td>반도체 소자 물리학2</td>
+            <td>&nbsp;</td>
+            <td>정보 디스플레이 개론</td>
+            <td>&nbsp;</td>
+        </tr>
+        <tr>
+            <td>5교시</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>진로탐색 및 설계</td>
+            <td>&nbsp;</td>
+        </tr>
+    </table>
 </body>
 </html>
