--- a/introduce.html
+++ b/introduce.html
@@ -65,11 +65,11 @@
         </tr>
         <tr>
             <td>5교시</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
             <td>진로탐색 및 설계</td>
-            <td>&nbsp;</td>
+            <td>&nbsp;&nbsp;&nbsp;</td>
         </tr>
     </table>
 </body>
