--- a/introduce.html
+++ b/introduce.html
@@ -24,6 +24,9 @@
     
     <table style="border: 1px solid black;" rules=all>
         <tr>
+            <th colspan=6>시간표</th>
+        </tr>
+        <tr>
             <th>&nbsp;</th>
             <th>월</th>
             <th>화</th>
