--- a/nxnaxx.github.io-main/예제 4-1,2,3.html
+++ b/nxnaxx.github.io-main/예제 4-1,2,3.html
@@ -64,16 +64,16 @@
     <hr>
     <p>예제 4-3</p>
     <div class="v1">
-        v1 <img src="./img/bubble.jpg" height="100">
+        v1 <img src="./img/bubble.png" height="100">
     </div>
     <div class="v2">
-        v2 <img src="./img/bubble.jpg" height="100">
+        v2 <img src="./img/bubble.png" height="100">
     </div>
     <div class="v3">
-        v3 <img src="./img/bubble.jpg" height="100">
+        v3 <img src="./img/bubble.png" height="100">
     </div>
     <div class="v2">
-        v4-v2 적용 <img src="./img/bubble.jpg" height="100">
+        v4-v2 적용 <img src="./img/bubble.png" height="100">
     </div>
 </body>
 </html>
